--- a/professional-website-sportify/assets/css/styles.css
+++ b/professional-website-sportify/assets/css/styles.css
@@ -1064,3 +1064,10 @@ body {
 [data-aos].aos-animate {
     transform: translateX(0) translateY(0);
 }
+
+.member-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Đảm bảo ảnh lấp đầy khung mà không bị méo */
+    border-radius: 50%; /* Giữ cho ảnh có dạng tròn */
+}
